--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,3 +20,27 @@ collections:
             fields:
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
+      - label: "About"
+        name: "about"
+        file: "src/content/about.md"
+        fields:
+          - label: "Description"
+            name: "description"
+            widget: list
+            fields:
+              - { label: "Paragraph", name: "paragraph", widget: "string" }
+          - label: "Project Partners"
+            name: "projectPartners"
+            widget: list
+            fields:
+              - { label: "Section title", name: "title", widget: "string" }
+              - label: "Partners"
+                name: "partners"
+                widget: list
+                fields:
+                  - { label: "Partner", name: "partner", widget: "string" }
+                  - {
+                      label: "Description",
+                      name: "description",
+                      widget: "string",
+                    }
