styling and minor content updates

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -46,6 +46,6 @@ collections:
             widget: list
             fields:
               - { label: "Name", name: "name", widget: "string" }
-              - { label: "Title", name: "title", widget: "string" }
+              # - { label: "Title", name: "title", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
               - { label: "Image", name: "image", widget: "text" }
