--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -49,3 +49,9 @@ collections:
               # - { label: "Title", name: "title", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
               - { label: "Image", name: "image", widget: "text" }
+      - label: "Join In"
+        name: "join in"
+        file: "src/content/join-in.md"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
